--- a/homepage.html
+++ b/homepage.html
@@ -29,9 +29,9 @@
 
             <h3>Imovéis</h3>
             <ul>
-                <li><a href="https://www.econconstrutora.com.br/detalhes/mid-sabara">Mid_Sabara</a></li>
-                <li><a href="https://www.econconstrutora.com.br/detalhes/vitalina">Vitalina</a></li>
-                <li><a href="https://www.econconstrutora.com.br/detalhes/easy-ipiranga">Easy-ipiranga</a></li>
+                <li><a href="#">Mid_Sabara</a></li>
+                <li><a href="#">Vitalina</a></li>
+                <li><a href="#">Easy-ipiranga</a></li>
             </ul>
 
             <h3>videos</h3>
